--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask>=2.0
-Flask-SocketIO>=5.0
-python-dotenv>=0.20
-eventlet>=0.33.0
-faster-whisper
-torch
-yt-dlp
-openai>=1.0.0
-requests
-feedparser>=6.0.10 
+Flask>=2.3.3
+Flask-SocketIO>=5.3.6
+python-dotenv>=1.0.0
+eventlet>=0.33.3
+faster-whisper>=0.9.0
+torch>=2.0.0
+yt-dlp>=2023.10.13
+openai>=1.3.0
+requests>=2.31.0
+feedparser>=6.0.10
