--- a/config.example.json
+++ b/config.example.json
@@ -1,11 +1,11 @@
 {
-  "SECRET_KEY": "請填入一組隨機字串",
-  "ACCESS_CODE": "你的通行碼（建議設定以提升安全性）",
+  "SECRET_KEY": "",
+  "ACCESS_CODE": "",
   "ACCESS_CODE_ALL_PAGE": false,
   "_comment_all_page_access": "💡 設為 true 時，所有頁面都需要通行碼驗證",
 
   "_comment_legacy": "=== 向後兼容的舊版配置 ===",
-  "OPENAI_API_KEY": "你的 OpenAI API 金鑰",
+  "OPENAI_API_KEY": "",
   "OPENAI_MAX_TOKENS": 10000,
 
   "_comment_ai": "=== AI 提供商配置（新版，優先使用） ===",
@@ -63,7 +63,8 @@
   "AI_FALLBACK_ORDER": ["openai", "claude", "gemini", "deepseek", "ollama"],
 
   "_comment_other": "=== 其他配置 ===",
-  "PUBLIC_PORT": 0, // 0 表示使用 SERVER_PORT，大於 0 時將作為公開訪問埠號
+  "PUBLIC_PORT": 0,
+  "_comment_public_port": "0 表示使用 SERVER_PORT，大於 0 時將作為公開訪問埠號",
   "WEBSITE_BASE_URL": "localhost",
   "TELEGRAM_BOT_TOKEN": "你的 Telegram Bot Token（如需通知功能）",
   "TELEGRAM_CHAT_ID": "你的 Telegram Chat ID（如需通知功能）",
